--- a/src/style.css
+++ b/src/style.css
@@ -54,9 +54,11 @@ button {
   border: 2px  solid black;
   border-bottom-width: 5px;
   border-right-width: 5px;
+  cursor: pointer;
 }
 
 .scores {
+  height: 100%;
   margin-top: 2px;
   border: 3px solid black;
   padding-top: 2px;
@@ -91,4 +93,53 @@ input[type=text] {
   padding: 8px;
   text-align: start;
   justify-content: center;
+}
+
+button.refresh {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.loading {
+  /* display: none; */
+  display: none;
+  justify-content: center;
+}
+
+.loading::after {
+  content: "";
+  width: 10px;
+  height: 10px;
+  border: 3px solid #ddd;
+  border-top-color: #009579;
+  border-radius: 100%;
+  animation: loading 1s ease infinite;
+}
+
+.scores .loading {
+  /* content: ""; */
+  width: 50px;
+  height: 50px;
+
+  /* border: 3px solid #dddddd;
+  border-top-color: #009579;
+  border-radius: 100%;
+  animation: loading 1s ease infinite; */
+}
+
+@keyframes loading {
+  to {
+    transform: rotate(1turn);
+  }
+}
+
+.message {
+  width: 100%;
+  height: auto;
+  display: none;
+}
+
+.first-alert {
+  display: none;
 }
